# Kamba-Diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  diffusion_mamba_kan_arch.html  pyproject.toml  requirements.txt  setup.py
configs/: base_config.py  generate.yaml  ldm_train.yaml  vae_train.yaml
configs/datasets/: brats_config.py  isic_config.py  rsna_config.py  stroke_config.py
datasets/: base_dataset.py  coco_dataset.py  imagenet_dataset.py
evaluators/: __init__.py  metrics.py  uncertainty.py  visualizer.py
kamba/: __init__.py  config.py
kamba/data/: __init__.py  coco.py  imagenet.py
kamba/evaluation/: __init__.py  clip_score.py  fid.py  inception_score.py  lpips.py  suite.py
kamba/models/: __init__.py  pipeline.py
kamba/models/blocks/: __init__.py  attention.py  embedding.py  kan_blocks.py  mamba_block.py
kamba/models/denoiser/: __init__.py  mamba_unet.py
kamba/models/diffusion/: __init__.py  ddim.py  ddpm.py  guidance.py
kamba/models/text_encoder/: __init__.py  clip_encoder.py
kamba/models/vae/: __init__.py  decoder.py  encoder.py  loss.py  model.py
kamba/utils/: __init__.py  checkpoint.py  distributed.py  ema.py  logger.py
models/: dmk_model.py  ldm_model.py
models/autoencoders/: __init__.py  kan_blocks.py  losses.py  vae.py
models/backbones/: convnext_v2.py  efficientnet.py  resnet.py
models/bottlenecks/: conv_block.py  mamba_block.py  transformer_block.py
models/decoders/: fpn_decoder.py  kan_decoder.py  unet_decoder.py
models/denoisers/: __init__.py  mamba_unet.py
models/diffusion/: ddim.py  ddpm.py  guidance.py  losses.py  scheduler.py
models/modules/: attention.py  cross_attention.py  embedding.py  symmetry.py
models/text_encoders/: __init__.py  clip_encoder.py
scripts/: convert_dataset.py  download_datasets.py  evaluate.py  generate.py  inference.py  train.py  train_ldm.py  train_vae.py
tests/: conftest.py  test_attention.py  test_data.py  test_datasets.py  test_ddpm.py  test_diffusion.py  test_kan.py  test_mamba_unet.py  test_models.py  test_registry.py  test_vae.py
trainers/: base_trainer.py  diffusion_trainer.py
utils/: checkpoint.py  distributed.py  ema.py  helpers.py  logger.py  metrics.py  registry.py
